--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       					<div class="navbar-nav d-flex justify-content-between">
         					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="index.html"><span class="p-2 h5">Inicio</span> <i class="fas fa-house-user"></i></a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="pcontacto/index.php"><span class="p-2 h5">Contacto</span> <i class="fas fa-address-book"></i></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="pportafolio/index.html"><span class="p-2 h5">Portfolio</span> <i class="fas fa-suitcase"></i></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="pportafolio/index.html"><span class="p-2 h5">Portafolio</span> <i class="fas fa-suitcase"></i></a>
     	    				<!--<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="ptecnologias/index.html"><span class="p-2 h5">Tecnologias</span> <i class="fas fa-microchip"></i></a>-->
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" target="_BLANK" href="https://blog.ramesptop.com"><span class="p-2 h5">Blog</span> <i class="fas fa-blog"></i></a>
  		     			</div>
@@ -49,7 +49,7 @@
 				<p class="h2 text-center text-white font-weight-bold">DISEÑO DE SITIOS WEB PARA HACER CRECER TU NEGOCIO <br/> Y DAR IMAGEN A TU MARCA</p>
 			</div>
 			<div class="col-12 p-5">
-				<h5 class="p-5 h5 text-center text-white font-weight-bold">En nuestra mente existe un mundo de posibilidades, solo debemos crear de adentro hacia afuera <br/> y asi materializar nuestros proyectos</h4>
+				<h5 class="p-5 h5 text-center text-white font-weight-bold">En nuestra mente existe un mundo de posibilidades, solo debemos crearlas de adentro hacia afuera y así materializar nuestros proyectos</h4>
 			</div>
 			<div class="col-12 d-flex justify-content-between flex-wrap">
 				<div class="p-5 d-none d-sm-flex col-sm-2"></div>
@@ -120,10 +120,10 @@
 	<div class="container">
 		<div class="row p-sm-5 p-2 d-flex justify-content-center ">
 			<div class="col-12 p-sm-5 p-2">
-				<p class="h3">Elegante & Economico</p>
+				<p class="h3">Elegante & Económico</p>
 				<p class="h1">Servicio de diseño web</p>
 				<hr class="linea col-12 col-sm-6" />
-				<p class="text-justify col-12 col-sm-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam illum vitae blanditiis ipsa molestias saepe aperiam, mollitia at cumque adipisci velit tempora necessitatibus harum tempore fuga aut nisi dignissimos iste.</p>
+				<p class="text-justify col-12 col-sm-6">Nos encargamos de dar forma y desarrollar sus proyectos web de manera que estos cuenten con diseño amigable al usuario en todo tipo de pantallas, además de que estos sean funcionales de manera que puedan servir a los propósitos deseados y que cumplan con los requerimientos y pautas dadas por el cliente</p>
 			</div>
 		</div>
 		<div class="row d-flex flex-wrap flex-column flex-sm-row justify-content-center">
@@ -160,7 +160,7 @@
 				</div>
 			</div>
 			<div class="mj col-12 col-sm-6">
-				<img class="laptop" src="img/mj.png" alt="">
+				<img class="laptop" src="img/LMS.png" alt="">
 			</div>
 			<div class="mt-5 col-12 d-flex justify-content-center pt-5 mb-5">
 				<div class="borde d-flex justify-content-center flex-wrap">
@@ -181,21 +181,21 @@
 		<div class="col-12">
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				  <div class="carousel-inner">
-				    <div class="carousel-item active ">
+				    <!--<div class="carousel-item active ">
 				    	<div class="d-flex justify-content-center">
 				      <img src="img/LMS.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
-				    </div>
-				    <div class="carousel-item ">
+				    </div>-->
+				    <a href="https://www.ramesptop.com/pcafe/" target="_BLANK" class="carousel-item active">
 				    	<div class="d-flex justify-content-center">
 				      <img src="img/pcafe.png" class="carrucelI2 d-block w-100" alt="">
 				      	</div>
-				    </div>
-				    <div class="carousel-item ">
+				    </a>
+				    <a href="https://www.ramesptop.com/psushi/" target="_BLANK" class="carousel-item ">
 				    	<div class="d-flex justify-content-center">
 				      <img src="img/psushi.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
-				    </div>
+				    </a>
 				  </div>
 				  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
 				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -224,18 +224,18 @@
 				<hr/>
 				</div>
 			</div>
-			<div class="col-12 col-sm-4 contactoT d-flex justify-content-start rounded flex-column mt-5 p-3">
+			<div class="col-12 col-sm-4 contactoT d-flex justify-content-start flex-wrap rounded flex-column mt-5 p-1 p-sm-3">
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-1 p-sm-2">Email: rene@ramesptop.com <br/> ramesptop@protonmail.com</p><i class="pt-4 correo contactoI fas fa-envelope"></i>
+					<p class="d-flex flex-wrap contacto text-dark p-1 p-sm-2">Email: rene@ramesptop.com <br/> ramesptop@protonmail.com</p><i class="pt-4 correo contactoI fas fa-envelope"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Telefono: +51(941)339-689</p><i class="p-2 telefono contactoI fas fa-phone-square"></i>
+					<p class="d-flex flex-wrap contacto text-dark p-2">Telefono: +51(941)339-689</p><i class="p-2 telefono contactoI fas fa-phone-square"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
 					<p class="contacto text-dark p-2">Telegram: @RamEsptop</p><i class="p-2 telegram contactoI fab fa-telegram"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Signal: +51(941)339-689</p><i class="p-2 signal contactoI far fa-comment"></i>
+					<p class="d-flex flex-wrap contacto text-dark p-2">Signal: +51(941)339-689</p><i class="p-2 signal contactoI far fa-comment"></i>
 				</div>				
 			</div>
 			<div class="col-12 col-sm-2 contactoT contactoT2 rounded d-flex justify-content-start flex-wrap flex-column ">
@@ -264,10 +264,10 @@
 	-->
 	<footer class="footer d-flex justify-content-center align-content-end ">
 		<div class="d-flex justify-content-between flex-column pt-3">
-			<div class="logof m-auto col-4 bg-white p-1 d-flex rounded ">
+			<div class="logof m-auto col-6 col-sm-3 bg-white p-1 d-flex rounded ">
 				<img class="logo img-fluid" src="img/logo1.png" alt="">		
 			</div>	
-      		<p class="text-light mt-4 h4 mr-3">Diseñado y desarrollado por Ramesptop Web design - 2021</p>		
+      		<p class="text-light mt-4 h5 mr-3">Diseñado y desarrollado por Ramesptop Web design - 2021</p>		
 		</div>
 	</footer>
 
