--- a/pportafolio/index.html
+++ b/pportafolio/index.html
@@ -57,12 +57,12 @@
 				<a href="https://blog.ramesptop.com" target="_BLANK" class="cuatro rounded"></a>
 				<a href="https://ramesptop.com/pcevicheria/" target="_BLANK" target="_BLANK" class="cinco rounded"></a>
 				<a href="https://www.ramesptop.com/psushi/index.html" target="_BLANK" class="seis rounded"></a>
-				<a href="../ptecnologias/index.html" target="_BLANK" class="siete rounded"></a>
-				<a href="https://blog.ramesptop.com" target="_BLANK" class="ocho rounded"></a>
-				<a href="../ptecnologias/index.html" target="_BLANK" class="nueve rounded"></a>
+				<a href="https://www.ramesptop.com/pIgc/" target="_BLANK" class="siete rounded"></a>
+				<a href="https://www.ramesptop.com/" target="_BLANK" class="ocho rounded"></a>
+				<!--<a href="../ptecnologias/index.html" target="_BLANK" class="nueve rounded"></a>
 				<a href="../ptecnologias/index.html" target="_BLANK" class="diez rounded"></a>
 				<a href="../ptecnologias/index.html" target="_BLANK" class="once rounded"></a>
-				<a href="../ptecnologias/index.html" target="_BLANK" class="doce rounded"></a>
+				<a href="../ptecnologias/index.html" target="_BLANK" class="doce rounded"></a>-->
 			</seccion>
 		</section>
 		<!--
